--- a/Clean-Architecture/Dockerfile
+++ b/Clean-Architecture/Dockerfile
@@ -4,6 +4,11 @@ RUN apk add --no-cache git
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
+RUN go get github.com/99designs/gqlgen/codegen/config
+RUN go get github.com/99designs/gqlgen/internal/imports
+RUN go get github.com/99designs/gqlgen/api
+RUN go get github.com/99designs/gqlgen
+RUN go run github.com/99designs/gqlgen generate
 RUN go build -o server ./cmd/api
 
 FROM alpine:latest
