--- a/Clean-Architecture/docker-compose.yml
+++ b/Clean-Architecture/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     build: .
     container_name: orders-api
     ports:
-      - "8080:8080"
+      - "8080:8080"   # REST
+      - "50051:50051" # gRPC
+      - "8081:8081"   # GraphQL
     environment:
       - SERVER_PORT=8080
       - DB_HOST=db
